<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!-- Common items for all users -->
    <group android:id="@+id/group_common" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/home" />
    </group>

    <!-- Student-specific items (hidden for University Admin) -->
    <group android:id="@+id/group_student" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/nav_profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/nav_message"
            android:title="Messages" />


        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/nav_schedule"
            android:title="@string/schedule" />

        <item
            android:id="@+id/nav_scores"
            android:icon="@drawable/nav_scores"
            android:title="@string/scores" />

        <item
            android:id="@+id/nav_clubs"
            android:icon="@drawable/nav_clubs"
            android:title="@string/clubs" />
    </group>

    <!-- Admin-specific items (Debug Admin + University Admin) -->
    <group android:id="@+id/group_admin" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/nav_admin"
            android:title="@string/admin" />

        <item
            android:id="@+id/nav_post"
            android:icon="@drawable/nav_admin"
            android:title="@string/posting" />
    </group>

    <!-- Settings and Logout at the bottom -->
    <group android:id="@+id/group_settings_logout" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/nav_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/nav_logout"
            android:title="@string/logout" />
    </group>

</menu>
