<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:layout_marginTop="20dp"
    app:cardBackgroundColor="?attr/colorSurface"
    app:cardCornerRadius="16dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="24dp">

        <FrameLayout
            android:layout_width="120dp"
            android:layout_height="126dp"
            android:layout_marginEnd="24dp">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToOutline="true"
                android:outlineProvider="background"
                android:scaleType="centerCrop"
                android:src="@drawable/nav_profile_pic" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Null"
                android:textColor="?attr/colorOnSurface"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Null"
                android:textColor="?attr/colorOnSurface"
                android:textSize="15sp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Online"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginStart="6dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/online_circle_icon"
                    app:tint="?attr/colorSecondary" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>